[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sprites/Sky.png" type="Texture" id=1]
[ext_resource path="res://Assets/resources/ground.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/resources/SF Atarian System.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/resources/button_theme.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/resources/button_theme_pressed.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/resources/button_theme_hover.tres" type="StyleBox" id=8]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.588235 )
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[node name="Menu" type="Node2D"]
script = ExtResource( 9 )

[node name="Sky" type="Sprite" parent="."]
scale = Vector2( 0.9375, 0.9375 )
texture = ExtResource( 1 )
centered = false
vframes = 2

[node name="LongGrassFloor" type="Node2D" parent="."]
position = Vector2( 72, 224 )

[node name="TileMap" type="TileMap" parent="LongGrassFloor"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 2, 65536, 0, 65536, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65538, 131072, 3, 2, 131073, 3, 5, 131074, 3, 5, 131075, 3, 5, 131076, 3, 5, 131077, 3, 5, 131078, 3, 5, 131079, 3, 5, 131080, 3, 5, 131081, 3, 5, 131082, 3, 5, 131083, 3, 5, 131084, 3, 5, 131085, 3, 3, 196608, 2, 0, 196609, 2, 1, 196610, 2, 1, 196611, 2, 1, 196612, 2, 1, 196613, 2, 1, 196614, 2, 1, 196615, 2, 1, 196616, 2, 1, 196617, 2, 1, 196618, 2, 1, 196619, 2, 1, 196620, 2, 1, 196621, 2, 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 570.0
margin_bottom = 270.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 170.0
margin_right = 370.0
margin_bottom = 240.0

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "DINO RUN"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 570.0
margin_bottom = 270.0
size_flags_horizontal = 13
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 490.0
margin_bottom = 240.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MarginContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 280.0
margin_bottom = 190.0
alignment = 1

[node name="Play" type="Button" parent="CanvasLayer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 120.0
margin_bottom = 74.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = " PLAY "

[node name="Shop" type="Button" parent="CanvasLayer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 120.0
margin_bottom = 111.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 4 )
text = "    SHOP    "

[node name="Quit" type="Button" parent="CanvasLayer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 120.0
margin_bottom = 148.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 5 )
text = " QUIT "

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 150, 230 )
[connection signal="pressed" from="CanvasLayer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
